v26.1-Alpha.1: Universal runtime — single artifact for JDK 8+ games
Theme: universal runtime resilience (per v26.0 robustness assessment).

- Backport entire agent source to Java 8 (bytecode major 52 verified on all
  modules): arrow switches to classic control flow, isBlank to trim/isEmpty,
  Map.of to static init, String.repeat to loop, Files.readString to
  readAllBytes, URLDecoder charset-name form, try-with-resource var rename.
  One fat jar now attaches to JDK 8 (1.12.x) through JDK 21+ (26.x) games;
  tests keep compiling against the modern toolchain.
- F-1: mappingsFile load failure now falls back to mappingsAuto when network
  consent is present — validated live: nonexistent file -> auto download ->
  6148 mappings cached and applied.
- F-2: JDK HttpServer frontend now enforces GET on read endpoints (405),
  matching the raw-socket frontend.
- Fix stale FALLBACK_VERSION constant that misreported the agent version
  whenever manifest lookup failed (inner bootstrap jar carries no manifest
  by construction; version falls back to the compiled constant).

Live validation (MC 1.21.1 dedicated server, obfuscated): fallback chain
fired end-to-end and the translated hook burned 35508 ServerLevel.tick
records into the live mirror before the environment killed the session.